clang/test/BSC/Negative/Method/Struct/struct_conflict_return_type/struct_conflict_return_type.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
  int a;
};

double struct Foo::getA(struct Foo* this); // expected-note {{previous declaration is here}}
int struct Foo::getA(struct Foo* this) { // expected-error {{conflicting types for 'getA'}}
  return this->a;
}
